--- a/About.html
+++ b/About.html
@@ -91,8 +91,9 @@
                     <br>
                   </h2>
                   <p class="u-text u-text-default u-text-2"><b>
-                      <span style="font-weight: 400;"></span></b>Cecile is a holistic therapist. Her approach to health and well-being focuses on considering the person as a whole rather than the individual symptoms, and&nbsp;<b>
-                      <span style="font-weight: 400;">emphasizes self-compassion and empowerment</span></b> .<br>
+                      <span style="font-weight: 400;"> As&nbsp;</span></b>a holistic therapist, her approach to health and well-being focuses on considering the person as a whole rather than the individual symptoms. She&nbsp;<b>
+                      <span style="font-weight: 400;">emphasizes self-compassion and empowerment.</span></b>
+                    <br>
                     <br>As a spiritually conscious practitioner, she helps people with awakening to their lives.<b>
                       <br></b>
                   </p>
@@ -140,9 +141,9 @@
                       </span><b>
                         <span style="font-weight: 400;">Hi&nbsp;!&nbsp;</span></b>
                       <br>
-                      <br><b></b>I'm Cecile Core,&nbsp;<br>a <span style="font-weight: 700;">holistic therapist</span>&nbsp;based in Montreal.<br>
+                      <br><b></b>I'm Cecile,&nbsp;<br>a <span style="font-weight: 700;">holistic therapist</span>&nbsp;based in Montreal.<br>
                       <br><b></b>I work as a <span style="font-weight: 700;">medium</span>, an interpreter of messages. By definition, a medium is a means of transmitting a message, a decoder.<br>
-                      <br><b></b>I serve as a <span style="font-weight: 700;">catalyst</span> to bring up intentions and as a <span style="font-weight: 700;">reflector</span>&nbsp;for you to see yourself.&nbsp;<br>To be aware and understand the messages that your&nbsp;physical and energetic Self is sending you.<br>
+                      <br><b></b>I serve as a <span style="font-weight: 700;">catalyst</span> to bring up intentions and as a <span style="font-weight: 700;">reflector</span>&nbsp;for you to see yourself.&nbsp;<br>The goal is to be aware and understand the messages that your&nbsp;physical and energetic Self is sending you.<br>
                       <br>I help you <span style="font-weight: 700;">release blockages&nbsp;&nbsp;</span>and enhance your mind-body-spirit connection<span style="font-weight: 700;">.</span>
                       <br>
                       <br>
