--- a/Services.html
+++ b/Services.html
@@ -48,9 +48,9 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container" style="">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item" style=""><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-3" href="Services.html" style="padding: 10px 20px;">Services</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-3" href="Services.html" style="padding: 10px 20px;">Services</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-3" href="About.html" style="padding: 10px 20px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-3" href="https://cecilecore.myflodesk.com/signup" style="padding: 10px 20px;">Subscribe</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-3" href="https://cecilecore.myflodesk.com/signup" target="_blank" style="padding: 10px 20px;">Subscribe</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -59,7 +59,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Services.html">Services</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://cecilecore.myflodesk.com/signup">Subscribe</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://cecilecore.myflodesk.com/signup" target="_blank">Subscribe</a>
 </li></ul>
               </div>
             </div>
@@ -153,7 +153,7 @@
     
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-custom-color-5 u-footer" id="sec-108f"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-align-center-xs u-image u-logo u-image-1" data-image-width="996" data-image-height="216">
+        <a href="Home.html" class="u-align-center-xs u-image u-logo u-image-1" data-image-width="996" data-image-height="216" title="Home">
           <img src="images/CecileCoreLogo-White.svg" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-1">
@@ -167,7 +167,7 @@
       c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
           </a>
         </div>
-        <a href="https://cecilecore.myflodesk.com/signup" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-2 u-border-custom-color-3 u-btn u-button-style u-custom-font u-heading-font u-hover-custom-color-3 u-none u-text-custom-color-3 u-text-hover-white u-btn-2">Join my email list</a>
+        <a href="https://cecilecore.myflodesk.com/signup" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-2 u-border-custom-color-3 u-btn u-button-style u-custom-font u-heading-font u-hover-custom-color-3 u-none u-text-custom-color-3 u-text-hover-white u-btn-2" target="_blank">Join my email list</a>
         <p class="u-align-center-lg u-align-center-md u-align-center-xl u-align-center-xs u-text u-text-2">@ 2025 Cecile Core</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
