--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   gtag('config', 'G-KLR391JT69');
 </script><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="fr"><header class="u-clearfix u-header u-header" id="sec-c0d9"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-white u-xl-mode" data-lang="fr"><header class="u-clearfix u-header u-header" id="sec-c0d9"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://tidycal.com/cecilecoreenergy" class="u-btn u-button-style u-btn-1" target="_blank">Book now</a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-position="Menu">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -87,7 +87,7 @@
       </div>
     </section>
     <section class="u-align-center u-clearfix u-custom-color-3 u-section-2" id="carousel_078f">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-30 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
@@ -122,7 +122,7 @@
       </div>
     </section>
     <section class="u-align-center u-clearfix u-section-4" id="sec-45cf">
-      <div class="u-clearfix u-expanded-width-xs u-layout-wrap u-layout-wrap-1">
+      <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
           <div class="u-layout-row">
             <div class="u-align-center u-container-style u-image u-layout-cell u-right-cell u-shading u-size-60 u-image-1" data-image-width="533" data-image-height="800">
